--- a/src/css/work.css
+++ b/src/css/work.css
@@ -1,5 +1,5 @@
 body {
-  row-gap: 3%;
+  row-gap: 5.6%;
 }
 
 .discover-section {
@@ -78,6 +78,6 @@ body {
 
   @media (max-width: 700px) {
     body {
-      row-gap: 1.5%;
-    } 
+      row-gap: 3%;
+    }
   }
